--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: 'SF';
+  font-style: normal;
+  font-weight: normal;
+  src: url('/fonts/SF-Pro-Text-Regular.otf') format('opentype');
+}
